// Vitest Snapshot v1

exports[`RoutineCard > should render successfully 1`] = `
<div>
  <div
    class="px-4 py-3 bg-red-50"
    data-testid="routine-card"
  >
    <div
      class="flex justify-between items-center space-x-3 h-7"
    >
      <div
        class="flex items-center space-x-3 max-w-[440px]"
      >
        <h3
          class="uppercase text-sm font-semibold text-red-600 truncate"
        >
          Routine 1
           
        </h3>
        <span
          class="font-medium text-sm text-red-400 ml-2 tabular-nums flex-shrink-0"
        >
          00:00
        </span>
      </div>
      <div
        class="flex items-center space-x-1 flex-shrink-0"
      >
        <button
          class="p-1 rounded-md hover:bg-red-100"
          data-testid="routine-card-settings"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 3a1.5 1.5 0 110 3 1.5 1.5 0 010-3zM10 8.5a1.5 1.5 0 110 3 1.5 1.5 0 010-3zM11.5 15.5a1.5 1.5 0 10-3 0 1.5 1.5 0 003 0z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`RoutineCard > shouldn't show settings button 1`] = `
<div>
  <div
    class="px-4 py-3 bg-red-50"
    data-testid="routine-card"
  >
    <div
      class="flex justify-between items-center space-x-3 h-7"
    >
      <div
        class="flex items-center space-x-3 max-w-[440px]"
      >
        <h3
          class="uppercase text-sm font-semibold text-red-600 truncate"
        >
          Routine 1
           
        </h3>
        <span
          class="font-medium text-sm text-red-400 ml-2 tabular-nums flex-shrink-0"
        >
          00:00
        </span>
      </div>
    </div>
  </div>
</div>
`;
